<resources>
    <string name="app_name">SportoBook</string>
    <string name="register">Register</string>
    <string name="welcome_to_book_a_court">Welcome to SportoBook</string>
    <string name="email_id">Email id</string>
    <string name="complex">Complex</string>
    <string name="person">Person</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone no.</string>
    <string name="sports_complex_name">Sports Complex Name</string>

    <string name="mobile_no">Mobile no.</string>
    <string name="book_a_court">Book-A-Court</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_nav_per">navPer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Bookings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav_com">navCom</string>
    <string name="title_activity_nav_complex">navComplex</string>
    <string name="user_history">User History</string>
    <string name="profile">Profile</string>
    <string name="chatbox">ChatBox</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">Gallery</string>
    <string name="manage_sports">Manage Sports</string>
    <string name="name">Name</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="tekken">Tekken</string>
    <string name="about_us">About Us</string>
    <string name="search_courts">Search courts</string>
    <string name="sort_by">Sort by :</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_user_register_here">New User? Register here</string>
</resources>