<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <ImageView
        android:id="@+id/background"
        android:layout_width="421dp"
        android:layout_height="185dp"
        android:scaleType="centerCrop"
        android:src="@drawable/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/reghead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/headland_one"
        android:text="@string/register"
        android:textColor="#ECE5E5"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/regconstraint"
        android:background="@drawable/register_back"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent = ".78"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background"
        app:layout_constraintVertical_bias="0">

    <LinearLayout
        android:id="@+id/linearper"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="350dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" >

        <EditText
            android:id="@+id/perName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_back"
            android:drawableStart="@drawable/ic_baseline_edit_24"

            android:padding="5dp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="#FDFDFD" />

        <EditText
            android:id="@+id/perEmail"
            android:layout_width="match_parent"
            android:background="@drawable/register_back"
            android:padding="5dp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:drawableStart="@drawable/ic_baseline_email_24"

            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/perPhone"
            android:layout_width="match_parent"
            android:background="@drawable/register_back"
            android:padding="5dp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:drawableStart="@drawable/ic_baseline_phone"

            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mobile_no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/perPass"
            android:layout_width="match_parent"
            android:background="@drawable/register_back"
            android:padding="5dp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:drawableStart="@drawable/ic_baseline_lock_24"

            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearcom"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:layout_constraintVertical_bias="0.068">

        <EditText
            android:id="@+id/comName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_back"
            android:padding="5dp"
            android:layout_marginVertical="@dimen/_4sdp"

            android:drawableStart="@drawable/ic_baseline_edit_24"
            android:ems="10"
            android:hint="@string/sports_complex_name"
            android:inputType="textPersonName"
            android:textColor="#FBFBFB" />

        <EditText
            android:id="@+id/comPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_back"
            android:padding="5dp"
            android:layout_marginVertical="@dimen/_4sdp"

            android:drawableStart="@drawable/ic_baseline_phone"
            android:ems="10"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:textColor="#FBFBFB" />

        <EditText
            android:id="@+id/comEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_back"
            android:padding="5dp"
            android:layout_marginVertical="@dimen/_4sdp"

            android:drawableStart="@drawable/ic_baseline_email_24"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColor="#FBFBFB" />

        <EditText
            android:id="@+id/comAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_back"
            android:padding="5dp"
            android:layout_marginVertical="@dimen/_4sdp"

            android:drawableStart="@drawable/ic_baseline_edit_24"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColor="#FBFBFB" />

        <EditText
            android:id="@+id/comPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_back"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:layout_marginVertical="@dimen/_4sdp"

            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FBFBFB" />

    </LinearLayout>


        <Button
            android:id="@+id/regcombtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_70sdp"
            android:layout_marginTop="276dp"
            android:fontFamily="@font/belgrano"
            android:text="@string/register"
            app:backgroundTint="#21C1B2"

            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearper"
            app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/regcombtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/regconstraint"
        app:layout_constraintVertical_bias="0">

        <Button
            android:id="@+id/complex"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:fadingEdge="vertical"
            android:fontFamily="@font/belgrano"
            android:text="@string/complex"
            android:textColor="#000000"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="@dimen/_20sdp" />

        <Button
            android:id="@+id/person"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:fadingEdge="vertical"
            android:fontFamily="@font/belgrano"
            android:text="@string/person"
            android:textColor="#000000"
            app:backgroundTint="#FFFEFE"
            app:cornerRadius="10dp" />

    </LinearLayout>

        <Button
            android:id="@+id/regperbtn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="72dp"
            android:text="@string/register"
            android:visibility="invisible"
            android:layout_marginHorizontal="@dimen/_70sdp"
            app:backgroundTint="#21C1B2"

            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearper" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regcombtn"
        app:layout_constraintVertical_bias="0.289" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>